# RayTracer

./: .gitignore  CMakeLists.txt  LICENSE  README.md  main.cpp  test.ppm  test_shaded  test_shaded.ppm  test_shaded_aa.ppm
include/: utils.h
include/Core/: Geometry.h  Ray.h  Scene.h  Sphere.h  Vector.h  configs.h
src/: Ray.cpp  Sphere.cpp  Vector.cpp  utils.h
src/Core/: AxisAlignedBoundingBox.cpp  AxisAlignedBoundingBox.h  BVHNode.cpp  BVHNode.h  Camera.cpp  Camera.h  Color.h  Factory.cpp  Factory.h  Geometry.h  HitPoint.h  Image.cpp  Image.h  Material.h  Mesh.cpp  Mesh.h  Ray.cpp  RayTracer.cpp  RayTracer.h  Scene.cpp  Scene.h  Sphere.cpp  Sphere.h  Vector.cpp  Vector.h
src/Materials/: Dielectric.cpp  Dielectric.h  Lambertian.cpp  Lambertian.h  MetalicMaterial.cpp  MetalicMaterial.h
